crates/rstest-bdd/tests/fixtures_macros/scenario_missing_name_empty.stderr
error: feature contains no scenarios
 --> tests/fixtures_macros/scenario_missing_name_empty.rs:5:19
  |
5 | #[scenario(path = "empty.feature", name = "Any scenario")]
  |                   ^^^^^^^^^^^^^^^
